# cmaketut

./: .gitignore  README.txt  overview.txt
01minimal/prjroot/: CMakeLists.txt  conf.h.in  tut.c
02withlib/prjroot/: CMakeLists.txt  conf.h.in  tut.c
02withlib/prjroot/libmymath/: CMakeLists.txt  mymath.c  mymath.h
03refactor/prjroot/: CMakeLists.txt
03refactor/prjroot/libmymath/: CMakeLists.txt
04install/prjroot/: CMakeLists.txt  conf.h.in
04install/prjroot/libmymath/: CMakeLists.txt
05sysdep/prjroot/: CMakeLists.txt  conf.h.in
05sysdep/prjroot/libmymath/: CMakeLists.txt  mymath.c
